# Bukky.Wave

Wave/: Dockerfile  README.md  excel_report.py  filtered_weather_data.csv  path to filtered_weather_data_excel.xlsx  pyproject.toml  query.py  wave1_0.py
