[tool.poetry]
name = "wave1_0.py"
version = "0.1.0"
description = "My Python Application"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here, for example:
# requests = "^2.26.0"
click = "^8.0"
pandas = "^1.3.3"
boto3 = "^1.18.52"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

